--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Carstagram</title>
+    <title>Organizr</title>
+    <meta name="description" content="Organize your online bookmarks and sites in one place." />
     <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/92272be603.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&display=swap" rel="stylesheet">
